--- a/css/pool.css
+++ b/css/pool.css
@@ -1,11 +1,20 @@
-canvas { width: 100%; height: 100% }
+* {
+    overflow: hidden;
+}
+
+canvas {
+    width: 100%;
+    height: 100%
+}
+
 #N_tag {
     color: white;
     padding: 24px;
     font: 48px Montserrat;
     /* font-weight: bold; */
-    position:absolute;
+    position: absolute;
 }
+
 #stats {
     position: absolute;
     width: 300px;
@@ -13,9 +22,10 @@ canvas { width: 100%; height: 100% }
     margin: 0;
     padding: 0;
 }
+
 #hit_me {
     font-weight: bold;
-    position:absolute;
+    position: absolute;
     margin-left: auto;
     margin-right: auto;
     left: 0;
@@ -26,9 +36,10 @@ canvas { width: 100%; height: 100% }
     z-index: 1;
     color: #fff;
 }
+
 #web_instructions {
     font-weight: bold;
-    position:absolute;
+    position: absolute;
     margin-left: auto;
     margin-right: auto;
     left: 0;
@@ -39,9 +50,11 @@ canvas { width: 100%; height: 100% }
     z-index: 1;
     color: #fff;
 }
+
 #hit_me:active {
     color: #777;
 }
+
 #overlay {
     position: absolute;
     font-size: 16px;
@@ -54,7 +67,7 @@ canvas { width: 100%; height: 100% }
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background: rgba(0,0,0,0.7);
+    background: rgba(0, 0, 0, 0.7);
 }
 
 #overlay button {
