--- a/css/main.css
+++ b/css/main.css
@@ -1,44 +1,37 @@
 html * {
   font-family: 'Montserrat', sans-serif;
+  overflow: hidden;
 }
 
 body { margin: 0; }
 
 .button {
-    align-items: center;
-    border: 1px solid transparent;
-    border-radius: 4px;
-    box-shadow: none;
-    display: inline-flex;
-    font-size: 1rem;
-    height: 2.5em;
-    justify-content: flex-start;
-    line-height: 1.5;
-    padding-bottom: calc(0.5em - 1px);
-    padding-left: calc(0.75em - 1px);
-    padding-right: calc(0.75em - 1px);
-    padding-top: calc(0.5em - 1px);
-    position: relative;
-    vertical-align: top;
-  }
-   .button:focus, .button:active {
-    outline: none;
-  }
+  font-size: xx-large;
+  height: 100%;
+  width: 100%;
+  margin: auto;
+  font-weight: bold;
+}
+
+.button:focus, .button:active {
+  outline: none;
+}
   
-   .button {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    user-select: none;
-  }
+.button {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
 
 
-#buttonsContainer {
-    position: absolute;
-    bottom: 5px;
-    right: 5px;
-    z-index: 3;
-  }
+div#buttonsContainer {
+  position: absolute;
+  /* padding: 10px; */
+  top: 0px;
+  left: 0px;
+  z-index: 3;
+}
 
 .lil-gui {
   --number-color: #fc2eff;
