--- a/css/main.css
+++ b/css/main.css
@@ -25,13 +25,12 @@ body { margin: 0; }
 }
 
 
-div#buttonsContainer {
+/* div#buttonsContainer {
   position: absolute;
-  /* padding: 10px; */
   top: 0px;
   left: 0px;
   z-index: 3;
-}
+} */
 
 .lil-gui {
   --number-color: #fc2eff;
