--- a/css/main.css
+++ b/css/main.css
@@ -25,12 +25,14 @@ body { margin: 0; }
 }
 
 
-/* div#buttonsContainer {
+#buttonsContainer {
   position: absolute;
+  width: 100%;
+  height: 100%;
   top: 0px;
   left: 0px;
   z-index: 3;
-} */
+}
 
 .lil-gui {
   --number-color: #fc2eff;
