--- a/css/controller.css
+++ b/css/controller.css
@@ -1,10 +1,14 @@
+body {
+    font-family: 'Montserrat', sans-serif;
+    background-color : black;
+}
+
 div {
     position : fixed;
     top : 0;
     left : 0;
     width : 100%;
     height : 100%;
-    background-color : black;
     display : flex;
     justify-content : center;
     align-items : center;
@@ -19,5 +23,16 @@ a {
     color : white;
     line-height : 200%;
     font-size: large;
-    font-family: 'Montserrat', sans-serif;
+}
+
+#count {
+    position:relative;
+    top: 10px;
+    left: 10px;
+    width:150px;
+    margin:10px;
+    color: white;
+    font-size: large;
+    /* background-color : red; */
+
 }
